--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -94,7 +94,8 @@
 										<h1 class="panel-title">Ingredients</h1>
 									</div>
 									<div class="col-md-1">
-										<a class="btn btn-default" href="#" role="button">Edit</a>
+										<!-- 										<a class="btn btn-default" href="#" role="button">Edit</a> -->
+										<a class="btn btn-default" href="#" role="button">View</a>
 									</div>
 								</div>
 							</div>
@@ -104,7 +105,8 @@
 										<ul th:if="${not #lists.isEmpty(recipe.ingredients)}">
 											<li th:remove="all">1 Cup of milk</li>
 											<li th:remove="all">1 Teaspoon of chocolate</li>
-											<li>asdf</li>
+											<!-- 											<li>asdf</li> -->
+											<li th:remove="all">asdf</li>
 											<li th:each="ingredient : ${recipe.ingredients}"
 												th:text="${(ingredient.getAmount() +
                                         ' ' + ingredient.uom.getDescription() +
