--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -25,7 +25,7 @@
 	<div class="container-fluid" style="margin-top: 20px">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-				<form th:object="${recipe}" th:action="@{/recipe/}">
+				<form th:object="${recipe}" th:action="@{/recipe/}" method="post">
 					<input type="hidden" th:field="*{id}" />
 					<div class="pannel-group">
 						<div class="panel panel-primary">
@@ -64,7 +64,13 @@
 											class="form-control" th:field="*{cookTime}" />
 									</div>
 									<div class="col-md-3 form-group">
-										<label>Difficulty:</label> <select class="form-control">
+										<label>Difficulty:</label> <select class="form-control"
+											th:field="*{difficulty}">
+											<option
+												th:each="difficultyValue : ${T(com.lntellimed.recipe.domain.Difficulty).values()}"
+												th:value="${difficultyValue.name()}"
+												th:text="${difficultyValue.name()}">val</option>
+										</select> <select class="form-control" th:remove="all">
 											<option>Easy</option>
 											<option>Medium</option>
 											<option>Hard</option>
@@ -96,7 +102,9 @@
 									<div class="col-md-1">
 										<!-- 										<a class="btn btn-default" href="#" role="button">Edit</a> -->
 										<!-- 										<a class="btn btn-default" href="#" role="button">View</a> -->
-										<a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}" role="button">View</a>
+										<a class="btn btn-default" href="#"
+											th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}"
+											role="button">View</a>
 									</div>
 								</div>
 							</div>
