--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -28,21 +28,38 @@
 				<div class="pannel-group">
 					<div class="panel panel-primary">
 						<div class="panel-heading">
-							<h1 class="panel-title" th:text="${recipe.description}">Recipe
-								Description Here!</h1>
+							<!-- 							<h1 class="panel-title" th:text="${recipe.description}">Recipe -->
+							<!-- 								Description Here!</h1> -->
+							<div class="row">
+								<div class="col-md-3">
+									<h1 class="panel-title" th:text="${recipe.description}">Recipe
+										Description Here!</h1>
+								</div>
+
+								<div class="col-md-1">
+									<a class="btn btn-default" href="#"
+										th:href="@{'/recipe/' + ${recipe.id} + '/image'}"
+										role="button">Change Image</a>
+								</div>
+							</div>
 						</div>
 						<div class="panel-body">
 							<div class="row">
 								<div class="col-md-3">
 									<h5>Categories:</h5>
 								</div>
-								<div class="col-md-9">
+								<div class="col-md-3">
 									<ul>
 										<li th:remove="all">cat one</li>
 										<li th:remove="all">cat two</li>
 										<li th:each="category : ${recipe.categories}"
 											th:text="${category.getDescription()}">cat three</li>
 									</ul>
+								</div>
+								<div class="col-md-6">
+									<img src="../../static/images/guacamole400x400WithX.jpg"
+										th:src="@{/images/guacamole400x400WithX.jpg}" width="200"
+										height="200">
 								</div>
 							</div>
 							<div class="row">
@@ -85,7 +102,7 @@
 								</div>
 								<div class="col-md-3">
 									<p>
-										<a href="#" th:href="${recipe.url}">View Original</a>
+										<a href="#" th:href="@{recipe.url}">View Original</a>
 									</p>
 								</div>
 							</div>
@@ -114,7 +131,7 @@
 										<li th:each="ingredient : ${recipe.ingredients}"
 											th:text="${(ingredient.getAmount() +
                                         ' ' + ingredient.uom.getDescription() +
-                                        ' - ' + ingredient.getDescription())}">1
+                                    ' - ' + ingredient.getDescription())}">1
 											Teaspoon of Sugar</li>
 									</ul>
 								</div>
@@ -128,11 +145,11 @@
 						<div class="panel-body">
 							<div class="row">
 								<div class="col-md-12">
-									<p th:text="${recipe.directions}">Lorem ipsum dolor sit
-										amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-										dolor. Aenean massa. Cum sociis natoque penatibus et magnis
-										dis parturient montes, nascetur ridiculus mus. Donec quam
-										felis, ultricies nec, pellentesque eu, pretium quis, sem.
+									<p th:text="${recipe.notes.recipeNotes}">Lorem ipsum dolor
+										sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+										eget dolor. Aenean massa. Cum sociis natoque penatibus et
+										magnis dis parturient montes, nascetur ridiculus mus. Donec
+										quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
 										Nulla consequat massa quis enim. Donec pede justo, fringilla
 										vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus
 										ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis
